--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vibrant 3D Solar System with Colorful Planets</title>
+    <link rel="shortcut icon" href="planet.png" type="image/x-icon">
+    <title>3D SolarSystem</title>
     <style>
         body { margin: 0; background-color: #000000; overflow: hidden; }
         canvas { display: block; }
